Fix the issue when you have a big sized textarea and its label appears aligned to the middle

--- a/src/forms/css/forms.css
+++ b/src/forms/css/forms.css
@@ -166,6 +166,10 @@
     vertical-align: middle;
 }
 
+.pure-form-aligned textarea {
+    vertical-align: top;
+}
+
 /* Aligned Forms */
 .pure-form-aligned .pure-control-group {
     margin-bottom: 0.5em;
